Fixed contrast error SPECIAL

--- a/Css/special.css
+++ b/Css/special.css
@@ -9,11 +9,13 @@ img{
     
 }
 .event>p{ 
-    margin-top: -1.5em ;
-    margin-bottom: 1em;
+    
+background-image: url(/Images/background.jpg);
+padding-top: 10px;
+width: 100%;
+    margin-top: -0.2em ;
 font-size: 2.5em;
-color: white;
-margin-right: 50px;
+color: black;
 font-weight: 500;
 text-align: center;
 }
@@ -31,26 +33,23 @@ text-align: center;
 
 
         .event>p{ 
-            margin-top: -2.5em ;
-        font-size: 2em;
+        font-size: 1.5em;
     
         text-align: left;}
         .Event_headline{
-            font-size: 1em;
+            font-size: 1.5em;
         padding-top: 150px;}
+        .Event_headline{
+            font-size: 0.9em;
+        }
     }
 
 
     @media (max-width: 420px) {
         .event>p{ 
-            margin-top: -3em ;
-            margin-bottom: 2em;
-        font-size: 1.4em;
-        color: white;
-        margin-left: 5px;
-        font-weight: 500;
+        font-size: 1em;
         text-align: left;}
         .Event_headline{
-            font-size: 0.5em;}
+            font-size: 0.7em;}
     }
         
